# stm32-coder-ft

./: .gitignore  Modelfile  README.md  main.py  merge_export.py  pyproject.toml  test_load.py  train_stm32.py  website-pdf-links.txt
.github/: copilot-instructions.md
data_pipeline/: config.py  pipeline.py  stage_1_download.py  stage_2_extract.py  stage_3_chunk.py  stage_4_generate.py  stage_5_finalize.py
